--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,13 @@
 ================================================== */
 body {
 	width: 100%;
+	margin-right: -50px;
 }
 
 .wrapper {
 	width: 100%;
 }
-
+ work?
 
 @font-face {
 	font-family: Circular;
