--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,13 @@
 ================================================== */
 body {
 	width: 100%;
-	margin-right: -50px;
+	background-color: red;
+
 }
 
 .wrapper {
 	width: 100%;
 }
- work?
 
 @font-face {
 	font-family: Circular;
