--- a/css/main.css
+++ b/css/main.css
@@ -617,6 +617,10 @@ footer img {
 /* #Small Devices */
 @media only screen and (max-width: 767px) {
 
+	body {
+		padding: 0px;
+	}
+
 	#hero_container {
 		margin: 15px auto 75px auto;
 	}
