--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@
 body {
 	width: 100%;
 	padding: 0px;
+	margin: 0px;
 
 }
 
@@ -618,8 +619,13 @@ footer img {
 /* #Small Devices */
 @media only screen and (max-width: 767px) {
 
+	body {
+		margin: 0px;
+		padding: 0px;
+	}
+
 	.test-wrapper {
-		width: 100vw !important; 
+		width: 100% !important; 
 		background-color: red;
 
 	}
