--- a/css/main.css
+++ b/css/main.css
@@ -431,11 +431,12 @@ footer img {
 
 #about_hero {
 	margin: auto auto -5px auto;
-	max-width: 400px;
+	max-width: 415px;
 }
 
 #about_text {
 	float: left;
+	margin-top: 17px;
 }
 
 #cta {	/* Used for email CTA on index.html */
@@ -462,7 +463,7 @@ footer img {
 	line-height: 36px;
 	position: absolute;
 	right: 125px;
-	top: 170px;
+	top: 185px;
 	width: 335px;
 }
 
@@ -550,7 +551,7 @@ footer img {
 }
 
 .other li {
-	margin-right: 40px;
+	margin-right: 90px;
 }
 
 .splash_other {
@@ -598,7 +599,7 @@ footer img {
 
 	iframe {
 	  width: 100%;
-	  height: 85vh;
+	  height: 90vh;
 	}
 
 	.readmore img {
