--- a/css/main.css
+++ b/css/main.css
@@ -564,6 +564,10 @@ footer img {
 	width: 100%;
 }
 
+.h_iframe        {position:relative;}
+.h_iframe .ratio {display:block;width:100%;height:auto;}
+.h_iframe iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
+
 
 /* #Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
@@ -586,6 +590,19 @@ footer img {
 		top: 30%;
 	}
 
+	/* .embed_container {
+		position: relative;
+	    padding-bottom: 56.25%;
+	    padding-top: 35px;
+	    height: 0;
+	    overflow: hidden;
+	}
+
+	iframe {
+	  width: 100%;
+	  height: 80vh;
+	} */
+
 	h1 {
 		font-size: 26px;
 		line-height: 36px;
@@ -601,11 +618,6 @@ footer img {
 		padding-bottom: 25px;
 		padding-top: 35px;
 		text-align: center;
-	}
-
-	iframe {
-	  width: 100%;
-	  height: 90vh;
 	}
 
 	.readmore img {
