--- a/css/main.css
+++ b/css/main.css
@@ -564,11 +564,6 @@ footer img {
 	width: 100%;
 }
 
-.h_iframe        {position:relative;}
-.h_iframe .ratio {display:block;width:100%;height:auto;}
-.h_iframe iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
-
-
 /* #Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
@@ -590,18 +585,20 @@ footer img {
 		top: 30%;
 	}
 
-	/* .embed_container {
+	.h_iframe {
 		position: relative;
-	    padding-bottom: 56.25%;
-	    padding-top: 35px;
+	    padding-bottom: 47.09%;
 	    height: 0;
 	    overflow: hidden;
 	}
 
-	iframe {
-	  width: 100%;
-	  height: 80vh;
-	} */
+	.h_frame iframe {
+	    position: absolute;
+	    top:0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	}
 
 	h1 {
 		font-size: 26px;
