--- a/css/main.css
+++ b/css/main.css
@@ -585,19 +585,9 @@ footer img {
 		top: 30%;
 	}
 
-	.h_iframe {
-		position: relative;
-	    padding-bottom: 47.09%;
-	    height: 0;
-	    overflow: hidden;
-	}
-
 	.h_frame iframe {
-	    position: absolute;
-	    top:0;
-	    left: 0;
-	    width: 100%;
-	    height: 100%;
+	    width: 350px;
+	    height: 744px;
 	}
 
 	h1 {
