--- a/css/main.css
+++ b/css/main.css
@@ -548,13 +548,13 @@ footer img {
 /* #Other
 ================================================== */
 
-.h_frame {
+.h_iframe {
 	width: 438px;
 	height: 930px;
 	overflow: hidden;
 	}
 
-.h_frame iframe {
+.h_iframe iframe {
 	width: 100%;
 	height: 100%;
 }
@@ -596,7 +596,7 @@ footer img {
 		top: 30%;
 	}
 
-	.h_frame {
+	.h_iframe {
 		width: 350px;
 		height: 744px;
 		overflow: hidden;
