--- a/css/main.css
+++ b/css/main.css
@@ -585,7 +585,7 @@ footer img {
 }
 
 .container .spacex {
-	background-color: #FFFFFF;
+	background-color: #F2F2F2;
 	width: 100%;
 	height: 100%;
 }
