background color tweak attempt #2

--- a/css/main.css
+++ b/css/main.css
@@ -584,10 +584,8 @@ footer img {
 	width: 100%;
 }
 
-.container .spacex {
+.spacex {
 	background-color: #F2F2F2;
-	width: 100%;
-	height: 100%;
 }
 
 
