--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,33 @@
 /*
 * Maddie Simens
-* Copyright 2016
+* Copyright 2017
 */
-
-
-/* Table of Contents
-==================================================
-    #Basic elements
-    #Generic styles
-    #Sticky navbar
-    #Scroll to top
-    #Footer
-    #Index
-    #About
-    #Wistia
-    #Rdio
-    #Other
-    #Extra small devices, phones
-    #Small devices
-    #Larger than desktop
 
 
 /* #Basic elements
 ================================================== */
+
 @font-face {
-	font-family: Circular;
-	src: url(../fonts/CircularStd-Book.otf);
-	font-weight: 300;
+	font-family: Neuzeit;
+	src: url(../fonts/Neuzeit.ttf);
 }
 
 @font-face {
-	font-family: CircularMedium;
-	src: url(../fonts/CircularStd-Medium.otf);
-	font-weight: 400;
+	font-family: NeuzeitBold;
+	src: url(../fonts/Neuzeit_Heavy.ttf);
 }
 
-@font-face {
-	font-family: CenturySchoolbook;
-	src: url(../fonts/CenturySchoolbookRegular.ttf);
-}
 
 * {
-	color: #4A4A4A;
 	-webkit-font-smoothing: antialiased;
 	margin:0;
     padding: 0;
+    color: #000;
 }
 
 a {
-	color: #313131;
+	color: #FC3A28;
+	text-decoration: none;
 	-webkit-transition: color 0.2s;
 	-moz-transition:    color 0.2s;
 	-ms-transition:     color 0.2s;
@@ -57,636 +36,102 @@ a {
 }
 
 a:hover {	
-	color: #6AC3FC; 
+	color: #1478FB; 
 }
-
-body {
-	width: 100%;
-	padding: 0px;
-	margin: 0px;
-}
-
-button {
-	background: rgba(0,0,0,0);
-	border: solid 2px #EDEDED;
-	border-radius: 8px;
-	color: #C3C3C3;
-	display: block;
-	font-family: Circular;
-	font-size: 18px;
-	margin: 20px auto 50px auto;
-	opacity: 1;
-	transition: opacity .25s ease-in-out;
-    -moz-transition: opacity .25s ease-in-out;
-    -webkit-transition: opacity .25s ease-in-out;
-	padding: 10px 20px 10px 20px;
-	width: 198px;
-}
-
-button:hover {
-	opacity: 0.65;
-}
-
-.button a {
-	text-decoration: none;
-}
-
-h1, h5, h8, h9, nav {
-	font-family: Circular;
-	font-weight: normal;
-}
-
-h1 {	/* Used for headline on index.html */
-	font-size: 36px;
-	letter-spacing: .25px;
-	line-height: 45px;
-	padding-top: 60px;
-	padding-bottom: 60px;
-	margin-bottom: 0px;
-}
-
-h3 {	/* Used for case study title i.e. "Wistia" */
-	color: #ffffff;
-	font-family: CircularMedium;
-	font-size: 56px;
-	letter-spacing: .25px;
-	line-height: 115%;
-	text-align: center;
-	padding-top: 30px;
-	margin-top: 20px;
-}
-
-h4 {	/* Used for feature titles in case studies */
-	font-family: CircularMedium;
-	font-size: 48px;
-	padding-bottom: 35px;
-	padding-top: 45px;
-	text-align: center;
-}
-
-h5 {	/* Used for feature subtitles in case studies */
-	color: #9B9B9B;
-	font-size: 28px;
-	line-height: 56px;
-}
-
-h6 {	/* Used for readmore header text */
-	color: #313131;
-	font-family: CircularMedium;
-	font-size: 13px;
-	letter-spacing: 1px;
-	padding-top: 50px;
-	padding-bottom: 5px;
-}
-
-h7 {	/* readmore link title */
-	color: #313131;
-	font-family: CircularMedium;
-	font-size: 16px;
-	float: left;
-	padding-top: 32px;
-}
-
-h8 {	/* readmore link metadata */
-	color: #C3C3C3;
-	float: left;
-	font-size: 14px;
-	padding-top: 7px;
-}
-
-h9 {	/* Perpendicular title text for case study thumbnails on index.html */
-	color: #fff;
-	font-size: 16px;
-	position: absolute;
-	right: 7px;
-	top: 35px;
-	-webkit-transform: rotate(-90deg);
-	-moz-transform: rotate(-90deg);
-	-ms-transform: rotate(-90deg);
-	-o-transform: rotate(-90deg);
-	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-}
-
-iframe {
-	display: block;
-	padding-bottom: 20px;
-	width: 90%;
-}
-
-p {
-	font-family: CenturySchoolbook;
-	font-size: 18px;
-	line-height: 28px;
-}
-
-
-/* #Generic styles
-================================================== */
 
 .alignleft {
 	float: left;
 }
 
-.alignright {
-	float: right;
+body {
+	background-color: #ffffff;
+	font-family: Neuzeit;
+	font-size: 18px;
+	line-height: 28px;
 }
 
-.alignright a {
-	margin-left: 40px;
+.container {
+	margin-left: 19%;
+	width: 320px;
 }
 
-.caption {
-	color: #aaa;
-	font-family: Circular;
-	font-size: 14px;
-	margin-top: -20px;
-	margin-bottom: 50px;
-	text-align: center;
-}
-
-.full_background {
-	background-size: cover;
-	display: inline-block;
-	height: auto;
-	margin: 30px auto 30px auto;
-	width: 100%;
-}
-
-.img_padding {
-	margin: 30px auto 30px auto;
-}
-
-.img_padding_small {
-	margin: 15px auto 30px auto;
-}
-
-.iphone {
-	max-width: 95%;
-}
-
-li {
-	color: #C3C3C3;
-	float: left;
-	font-family: Circular;
-	font-size: 13px;
-	letter-spacing: 1px;
-	margin-right: 52px;
-}
-
-.margin_bottom {
-	margin-bottom: 0px;
-}
-
-.margin_top {
-	margin-top: -10px;
-}
-
-nav {
-	font-size: 16px;
-	padding-top: 30px;
-}
-
-nav a {
-	text-decoration: none;
-}
-
-nav a:hover {
-	border-color: #BCE4FE;
+#dividers {
+	border-color: #000;
 	border-style: solid;
-	border-width: 0 0 0px;
-	box-shadow: inset 0 -4px 0 #BCE4FE;
-	color: inherit;
+	border-width: 1px 0 1px;
+	height: 135px;
+	margin-bottom: 35px;
+	margin-top: 15px;
+	width: 330px;
 }
 
-.nav_active {
-	border-color: #BCE4FE;
-	border-style: solid;
-	border-width: 0 0 0px;
-	box-shadow: inset 0 -4px 0 #BCE4FE;
-	color: inherit;
-}
 
-#nav {
-	background-color: #fff;
-	width: 100%;
-	z-index: 150;
-}
-
-#nav_email_icon {
-	display: inline-block;
-	margin-top: 5px;
-	opacity: 1;
-	width: 20px;
-}
-
-.separator {
-	background-color: #EDEDED;
-	height: 2px;
-	margin-top: 70px;
-	margin-bottom: 60px;
-}
-
-.social {
-	float: left;
+h1 {
+	font-family: NeuzeitBold;
+	font-size: 21px;
+	letter-spacing: .25px;
+	line-height: 32px;
 	padding-top: 20px;
 }
 
-.social img {
-	float: left;
-	padding: 0px 32px 0px 0px;
+.icon {
+	padding-right: 27px;
+	width: 18px;
 }
 
-.spacer {
-	height: 100px;
+#icons {
+	margin-top: 70px;
+	margin-bottom: 65px;
 }
 
-.spacer_bottom {
-	padding-bottom: 15px;
-}
-
-.spacer_small {
-	height: 50px;
-}
-
-.spacer_top {
-	padding-top: 15px;
-}
-
-.splash_image {
-	display: flex;
-	padding-top: 35px;
-	width: 100%;
-}
-
-.subnav .separator {
-	margin-top: 45px;
-	margin-bottom: 0px;
-}
-
-.subtitle {
-	color: #ffffff; 
-	font-family: Circular; 
-	font-size: 24px;
-	margin-top: 5px;
-	margin-bottom: 20px;
-	text-align: center;
-}
-
-.thumb {	/* Case study previews on index.html and link previews in readmore */
-	margin-top: 15px;
-	opacity: 1;
-    transition: opacity .25s ease-in-out;
-    -moz-transition: opacity .25s ease-in-out;
-    -webkit-transition: opacity .25s ease-in-out;
-    position: relative;
-}
-
-.thumb:hover {
-	opacity: 0.6;
-}
-
-thumb_email {
-	background-color: #F4F4F4;
-}
-
-ul {
-	background-color: #fff;
-	margin: 0px auto;
-	padding-top: 50px;
-	width: 700px;
-}
-
-ul a {
-	color: #c3c3c3;
-	font-family: CircularMedium;
-	margin: 0px auto;
-	text-decoration: none;
-}
-
-#nav a:hover,	
-#nav a.active {
-	color: #313131;
-	border-color: #313131;
-	border-style: solid;
-	border-width: 0 0 2px;
-	padding-bottom: 27px;
-}
-
-.u-max-full-width {
-	box-sizing: border-box; 
- 	max-width: 100%;
-}
-
-
-/* #Sticky navbar
-================================================== */
-
-.main-nav-scrolled {
-  position: fixed;
-  margin-top: -25px;
-  width: 100%;
-  top: 0;
-}
-
-.sticky_fix {
-	padding-top: 90px;
-}
-
-
-/* #Scroll to top icon
-================================================== */
-
-.scrollToTop {
-	width:40px; 
-	height:5px;
-	padding:10px; 
-	position:fixed;
-	bottom:50px;
-	right:30px;
-	display:none;
-	background: url('../images/scroll_icon.png') no-repeat;
-	background-size: 50%;
-}
 
 
 /* #Footer
 ================================================== */
 
 footer {
-	margin: auto;
+	font-family: Neuzeit;
+	font-size: 18px;
+	float: left;
+	margin-top: 65px;
 	padding-bottom: 140px;
-	padding-left: 18px;
-	width: 230px;
+	width: 340px;
 }
 
-footer #copyright {
-	color: #c3c3c3;
-	display: block;
-	font-family: Circular;
-	margin: 35px auto 0px auto;
-	width: 180px;
-}
-
-footer img {
-	float: left;
-	padding: 0px 16px 0px 16px;
-}
-
-
-/* #Index
-================================================== */
-
-#preview4 {
-	position: relative;
-}
-
-
-/* #About
-================================================== */
-
-#about_hero {
-	margin: auto auto -7px auto;
-	max-width: 400px;
-}
-
-#about_text {
-	float: left;
-	margin-top: 17px;
-}
-
-#cta {	/* Used for email CTA on index.html */
-	color: white;
-	font-family: Circular;
-	font-size: 16px;
-	left: 0;
-	line-height: 20px;
-    position:absolute;
-    text-align:center;
-    top: 35%;
-    width: 100%;
-}
-
-#hero_container {
-	background-color: #BBE4FF;
-	margin: 15px auto 30px auto;
-	position: relative;
-}
-
-#hero_text {
-	color: #55bbff;
-	font-family: Circular;
-	font-size: 28px;
-	line-height: 36px;
-	position: absolute;
-	right: 125px;
-	top: 185px;
-	width: 335px;
-}
-
-#hero_text_alt {
-	display: none;
-}
-
-
-/* #Wistia
-================================================== */
-
-.full_background.wistia {
-	background-color: #F7F6F4;
-}
-
-.readmore .separator {
-	margin-top: 20px;
-	margin-bottom: 0px;
-}
-
-.readmore img {
-	padding-top: 5px;
-	width: 150px;
-}
-
-.splash_wistia {
-	background-color: #77C9FF;
-	background-size: cover;
-	margin-top: 0px;
-	overflow: hidden;
-	width: 100%;
-}
-
-.wistia nav a {
-	color: #ffffff;
-	opacity: 1;
-}
-
-.wistia nav a:hover {
-	border-width: 0 0 0px;
-	border-style: none;
-	box-shadow: inset 0 0 0;
-	color: #fff;
-	opacity: 0.65;
-}
-
-
-/* #Rdio
-================================================== */
-
-.full_background.rdio_blue {
-	background-color: #2593CE;
-}
-
-.full_background.rdio_blue p {
-	color: #fff;
-}
-
-.full_background.rdio_blue h5 {
-	color: #fff;
-}
-
-.full_background.rdio_light {
-	background-color: #F2F2F2;
-}
-
-.rdio {
-	position: relative;
-}
-
-.splash_rdio {
-	background-color: #2593CE;
-	background-size: cover;
-	margin-top: 0px;
-	overflow: hidden;
-	width: 100%;
-}
-
-
-/* #Other
-================================================== */
-
-#other {
-	background-color: #ee9a7f;
-}
-
-.other iframe {
-	display: block;
-	margin: -35px auto 10px auto;
-	width: 90%;
-}
-
-.other li {
-	margin-right: 69px;
-}
-
-.splash_other {
-	background-color: #EE9A7F;
-	background-size: cover;
-	margin-top: 0px;
-	overflow: hidden;
-	width: 100%;
-}
-
-.spacex {
-	background-color: #F2F2F2;
+footer a {
+	margin-right: 18px;
 }
 
 
 /* #Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
-	* {
-	    margin:0;
-	    padding: 0;
-	}
+body {
+	font-size: 17px;
+}
 
-	#about_hero {
-		max-width: 325px;
-	}
+.container {
+	margin-left: 8%;
+}
 
-	body {
-		margin: 0px;
-		padding: 0px;
-	}
+footer {
+	font-size: 17px;
+}
 
-	#cta {
-		top: 30%;
-	}
-
-	h1 {
-		font-size: 26px;
-		line-height: 36px;
-	}
-
-	h3 {
-		font-size: 40px;
-	}
-
-	h4 {	/* Used for feature titles in case studies */
-		font-family: CircularMedium;
-		font-size: 36px;
-		padding-bottom: 25px;
-		padding-top: 35px;
-		text-align: center;
-	}
-
-	.readmore img {
-		float: left;
-		width: 100%;
-	}
-
-	.scrollToTop {
-		bottom:25px;
-		right:5px;
-	}
-
-	.spacer {
-		height: 0px;
-	}
-
-	.subtitle {
-		font-size: 18px;
-		padding-top: 5px;
-	}
+footer a {
+	margin-right: 20px;
+}
 
 }
 
 /* #Small Devices */
 @media only screen and (max-width: 767px) {
 
-	#hero_container {
-		margin: 15px auto 75px auto;
-	}
-
-	#hero_text {
-		display: none;
-	}
-
-	#hero_text_alt {
-		display: inline-block;
-		font-family: Circular;
-		font-size: 22px;
-		line-height: 30px;
-		margin-bottom: 10px;
-		text-align: center;
-	}
-
-	.social {
-		display: none;
-	}
 }
 
 /* #Larger than desktop */
 @media (max-width: 1200px) {
 
-	ul {
-		display: none;
-	}
-
-	.subnav .separator {
-		display: none;
-	}
-
-	.subnav h4 {
-		margin-top: 50px;
-	}
 }
 
 }
