--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ footer a {
 }
 
 /* #Larger than desktop */
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
 
 .container {
 	margin: auto;
