--- a/css/animate.css
+++ b/css/animate.css
@@ -7,8 +7,8 @@ Copyright (c) 2014 Daniel Eden
 */
 
 .animated {
-  -webkit-animation-duration: 1500ms;
-          animation-duration: 1500mss;
+  -webkit-animation-duration: 2000ms;
+          animation-duration: 2000ms;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
 }
@@ -1066,21 +1066,21 @@ Copyright (c) 2014 Daniel Eden
 
 /* Add delayed effect to landing page */
 .fadeIn.one {
-  -webkit-animation-delay: 0.1s;
-  -moz-animation-delay: 0.1s;
-  animation-delay: 0.1s;
+  -webkit-animation-delay: 0.75s;
+  -moz-animation-delay: 0.75s;
+  animation-delay: 0.75s;
 }
  
 .fadeIn.two {
-  -webkit-animation-delay: 0.3s;
-  -moz-animation-delay:0.3s;
-  animation-delay: 0.3s;
+  -webkit-animation-delay: 0.9s;
+  -moz-animation-delay:0.9s;
+  animation-delay: 0.9s;
 }
  
 .fadeIn.three {
-  -webkit-animation-delay: 0.5s;
-  -moz-animation-delay: 0.5s;
-  animation-delay: 0.5s;
+  -webkit-animation-delay: 1.05s;
+  -moz-animation-delay: 1.05s;
+  animation-delay: 1.05s;
 }
 
 .fadeIn.four {
