--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@
 ================================================== */
 
 @font-face {
-	font-family: Neuzeit;
-	src: url(../fonts/Neuzeit.ttf);
+	font-family: NeueHaas;
+	src: url(../fonts/NHaasGroteskTXPro-55Rg.ttf);
 }
 
 @font-face {
-	font-family: NeuzeitBold;
-	src: url(../fonts/Neuzeit_Heavy.ttf);
+	font-family: NeueHaasMedium;
+	src: url(../fonts/NHaasGroteskTXPro-65Md.ttf);
 }
 
 
@@ -22,11 +22,20 @@
 	-webkit-font-smoothing: antialiased;
 	margin:0;
     padding: 0;
-    color: #000;
 }
 
-a {
-	color: #FC3A28;
+body.night a {
+	color: #fff;
+	text-decoration: none;
+	-webkit-transition: color 0.2s;
+	-moz-transition:    color 0.2s;
+	-ms-transition:     color 0.2s;
+	-o-transition:      color 0.2s;
+	transition:         color 0.2s;
+}
+
+body.day a {
+	color: #403E43;
 	text-decoration: none;
 	-webkit-transition: color 0.2s;
 	-moz-transition:    color 0.2s;
@@ -39,103 +48,151 @@ a:hover {
 	color: #1478FB; 
 }
 
-.alignleft {
-	float: left;
+body.night {	
+	background-color: #221F26;
+	color: #C8C8C9;
+	font-family: NeueHaas;
+	font-size: 16px;
+	line-height: 24px;
 }
 
-body {
-	background-color: #ffffff;
-	font-family: Neuzeit;
-	font-size: 18px;
-	line-height: 28px;
+body.day {
+	background-color: #F6F6F7;
+	color: #403E43;
+	font-family: NeueHaas;
+	font-size: 16px;
+	line-height: 24px;
 }
 
-.container {
-	margin-left: 19%;
-	width: 320px;
+footer {
+	color: #9F9EA1;
+	font-family: NeueHaas;
+	font-size: 12px;
+	letter-spacing: 1px;
+	line-height: 20px;
+	margin-top: 128px;
+
 }
 
-#dividers {
-	border-color: #000;
-	border-style: solid;
-	border-width: 1px 0 1px;
-	height: 135px;
-	margin-bottom: 35px;
-	margin-top: 20px;
-	width: 330px;
+body.night h1 {
+	color: #fff;
+	font-family: NeueHaasMedium;
+	font-size: 28px;
+	letter-spacing: .25px;
+	line-height: 34px;
+	padding-bottom: 64px;
 }
 
-
-h1 {
-	font-family: NeuzeitBold;
-	font-size: 21px;
+body.day h1 {
+	color: #403E43;
+	font-family: NeueHaasMedium;
+	font-size: 28px;
 	letter-spacing: .25px;
 	line-height: 32px;
-	padding-top: 20px;
+	padding-bottom: 64px;
 }
 
-.icon {
-	padding-right: 27px;
-	width: 18px;
+body.night h2 {
+	color: #fff;
+	font-family: NeueHaasMedium;
+	font-size: 16px;
+	letter-spacing: .25px;
+	line-height: 24px;
+	margin-bottom: 48px;
 }
 
-#icons {
-	margin-top: 75px;
-	margin-bottom: 65px;
+body.day h2 {
+	color: #403E43;
+	font-family: NeueHaasMedium;
+	font-size: 16px;
+	letter-spacing: .25px;
+	line-height: 24px;
+	margin-bottom: 48px;
+}
+
+h2 a {
+	padding-right: 32px;
+}
+
+body.night h3 {
+	color: #C8C8C9;
+	font-family: NeueHaas;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	line-height: 24px;
+	margin-bottom: 4px;
+}
+
+body.day h3 {
+	color: #403E43;
+	font-family: NeueHaas;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	line-height: 24px;
+	margin-bottom: 4px;
+}
+
+body.night h4 {
+	color: #8A898C;
+	font-family: NeueHaas;
+	font-size: 12px;
+	letter-spacing: 1.5px;
+	line-height: 20px;
+	margin-top: 0px;
+	text-transform: uppercase;
+}
+
+body.day h4 {
+	color: #9F9EA1;
+	font-family: NeueHaas;
+	font-size: 12px;
+	letter-spacing: 1.5px;
+	line-height: 20px;
+	margin-top: 0px;
+	text-transform: uppercase;
+}
+
+body.night #moon {
+	cursor: pointer;
+	width: 24px;
+}
+
+body.day #moon {
+	display: none;
+}
+
+body.night #sun {
+	display: none;
+}
+
+body.day #sun {
+	cursor: pointer;
+	width: 24px;
+}
+
+.spacer48 {
+	height: 48px;
+	width: 100%;
+}
+
+
+/* For devices smaller than 400px */
+@media (max-width: 550px) {
+body.night #moon {
+	padding-bottom: 64px;
+	width: 24px;
+}
+
+body.day #sun {
+	padding-bottom: 64px;
+	width: 24px;
 }
 
 
 
-/* #Footer
-================================================== */
 
-footer {
-	font-family: Neuzeit;
-	font-size: 18px;
-	float: left;
-	margin-top: 28px;
-	padding-bottom: 140px;
-	width: 340px;
-}
-
-footer a {
-	margin-right: 18px;
-}
+/* Day mode styling */
 
 
-/* #Extra Small Devices, Phones */ 
-@media only screen and (max-width : 480px) {
-
-body {
-	font-size: 17px;
-}
-
-.container {
-	margin-left: 8%;
-}
-
-footer {
-	font-size: 17px;
-}
-
-footer a {
-	margin-right: 20px;
-}
-
-}
-
-/* #Small Devices */
-@media only screen and (max-width: 767px) {
-
-}
-
-/* #Larger than desktop */
-@media (min-width: 1600px) {
-
-.container {
-	margin: auto;
-	width: 320px;
-}
-}
 
 }
