Fix mobile footer bug

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -46,6 +46,9 @@
 .three.columns.icon {
   width: 100%;
 }
+.six.columns {
+  width: 100%;
+}
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
